===============================================================================
Changes for faraday
===============================================================================

TODO:
[248] incorrect bulb flashing
[351] make B-field inside the magnet appear to move with the magnet
[424] B-field markers should disappear before they flip when bar magnet passes over them
[420] lightbulb should be transparent
[283] improve collision detection
[437] add "constant voltage source" feature
[423] change bar magnet colors to green and white
[442] make faraday into multiple sims
[443] add Earth image feature
[79] rotate coil or magnet
- convert model from Observer to Listener pattern

DONE:
3/26/08 - recalibrate PICKUP_REFERENCE_EMF and module scaling factors (LIGHTBULB_SCALE, VOLTMETER_SCALE, ELECTRON_SPEED_SCALE) [441]
3/26/08 - rename FaradayConstants.MAX_PICKUP_EMF to PICKUP_REFERENCE_EMF, add doc about how to set this [441]
3/26/08 - rename "voltage source" to "current source" throughout source code [437]
3/26/08 - set size of bar magnet model directly, scale graphic accordingly (instead of visa versa) [248]
3/26/08 - add a flag for quickly switching between pickup coil sample points strategies [248]
3/26/08 - set variable sample points strategy for pickup coil based on height of magnet [248]
3/26/08 - use strategy pattern for the multiple ways that we have to create pickup coil sample points [248]
3/25/08 - rename methods related to bar magnet "see inside" feature [351]
3/25/08 - use Point2D[] instead of double[] for sample points on pickup coil [248]
3/24/08 - revert to fixed number of sample points on pickup coil [248]
3/24/08 - calculate pickup coil sample points as y offset from coil's center, update only when radius changes [248]
3/24/08 - change instance data and accessors for AbstractMagnet size, delete unused code [248]
3/24/08 - undo conversion of magnet dimensions to integer precision [248]