@@ -2,6 +2,11 @@
 Changes for faraday
 ===============================================================================
 
+[248] fix flux model in PickupCoil
+[248] increase density of sample points
+[248] add developer control for C fudge factor
+
+
 TODO:
 [248] incorrect bulb flashing
 [351] make B-field inside the magnet appear to move with the magnet
@@ -16,6 +21,9 @@ TODO:
 - convert model from Observer to Listener pattern
 
 DONE:
+3/27/08 - reduce spacing between sample points on pickup coils [248]
+3/27/08 - change CoilMagnet shape from circle to square to accommodate new pickup coil sample point strategy [248]
+3/27/08 - remove redundant bounds member from DipoleMagnet, use modelShape to determine inside/outside [248]
 3/26/08 - recalibrate PICKUP_REFERENCE_EMF and module scaling factors (LIGHTBULB_SCALE, VOLTMETER_SCALE, ELECTRON_SPEED_SCALE) [441]
 3/26/08 - rename FaradayConstants.MAX_PICKUP_EMF to PICKUP_REFERENCE_EMF, add doc about how to set this [441]
 3/26/08 - rename "voltage source" to "current source" throughout source code [437]
